# responsible-neobank-growth

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.jobs  Makefile  NEOBANK_GCP_UPGRADE_KIT.md  PUBLIC_LAUNCH.md  README.md  cloudbuild.api.yaml  cloudbuild.jobs.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  keepalive.yml  monitoring-snapshot.yml
.streamlit/: config.toml
api/: __init__.py  activation_model.py  main.py  pricing_mart.py  schemas.py  scoring.py
app/: dashboard_data.py  streamlit_app.py
artifacts/gate0/: final-dbt-build.txt  final-pytest.txt  route-c-gate0-report.md  route-c-gate0-results.json
artifacts/plan2/: backfill-log.jsonl  blue-green-report.json  local-verification.json  verification-results.json  verification-summary.md
artifacts/plan3/: base-parity.json  (+9 more)
data_generator/: README.md  config.py  experiments.py  features.py  generate.py  onboarding.py  pricing.py  protection.py  referrals.py  sessions.py  support.py  transactions.py  users.py  utils.py  wellbeing.py
dataset/: README.md  build-manifest.json
dbt_neobank/: dbt_project.yml  profiles.bigquery.example.yml  profiles.yml
docs/: ACCESS_CONTROL.md  API.md  ARCHITECTURE.md  BATCH_SCORING.md  CASE_STUDY.md  CLOUD_RUN_DEPLOYMENT.md  CREDIBILITY.md  CUSTOMER_PROTECTION_SIMULATION.md  DIGITAL_INCLUSION.md  FAIR_VALUE_PRICING.md  FINANCIAL_WELLBEING_PROXIES.md  GCP_WAREHOUSE.md  MAINTENANCE.md  MONITORING.md  OPERATIONS_RUNBOOK.md  PORTFOLIO_RELEASE.md  PRICING_SCENARIOS.md  PRODUCT_READY_PLAN.md  PUBLIC_DATA_CALIBRATION.md  PUBLIC_LAUNCH.md  REAL_DATA_ADAPTER.md  REAL_DATA_CRITEO.md  REAL_DATA_PROVENANCE.md  RELEASE_DECISION_FRAMEWORK.md  RESPONSIBLE_GROWTH_REPORT.md  STREAMLIT_DEPLOYMENT.md  WORKED_DECISION_ONBOARDING_AB.md
evidence/: registry.yml  schema.json
looker/: README.md  manifest.lkml  responsible_neobank.model.lkml
notebooks/: 01_eda_activation_drivers.py  README.md
tests/: conftest.py  test_activation_model.py  test_api_service.py  test_batch_scoring.py  test_bigquery_score_load_plan.py  test_bigquery_score_monitoring_plan.py  test_bigquery_verify_plan.py  test_calibration.py  test_calibration_monitoring_report.py  test_cloud_config_export.py  test_cloud_run_api_deploy_plan.py  test_cloud_run_job_deploy_plan.py  test_cloud_run_job_entrypoints.py  test_cloud_run_scheduler_plan.py  test_criteo_adapter.py  test_customer_outcomes.py  test_customer_protection.py  test_dashboard_data.py  test_data_generator.py  test_digital_inclusion.py  test_experiment_analysis.py  test_gcp_cleanup_plan.py  test_gcp_load_plan.py  test_gcs_upload_plan.py  test_geo_incrementality.py  test_model_monitoring_report.py  test_monitoring_snapshot.py  test_no_circularity.py  test_pricing_governance.py  test_pricing_scenario_runs.py  test_project_metadata.py  test_rbac.py  test_release_decisions.py  test_responsible_growth_report.py  test_uci_adapter.py  test_wellbeing.py
(+430 files in other folders)
