[project]
name = "responsible-neobank-growth"
version = "0.1.0"
description = "A synthetic fintech decision-support platform combining product analytics, experimentation, model decisioning, pricing governance, and customer-outcome guardrails for responsible neobank growth."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Cheng-Yuan King", email = "rosscyking1115@gmail.com" }]
dependencies = [
    "altair>=5.5.0",
    "dbt-core>=1.10.0,<2",
    "dbt-duckdb>=1.9.0,<2",
    "duckdb>=1.3.0",
    "faker>=37.0.0",
    "fastapi>=0.136.3",
    "jsonschema>=4.23.0",
    "lightgbm>=4.6.0",
    "linearmodels>=6.0",
    "marimo>=0.13.0",
    "numpy>=2.2.0",
    "openpyxl>=3.1",
    "optuna>=4.3.0",
    "pandas>=2.2.0",
    "plotly>=6.0.0",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "shap>=0.47.0",
    "statsmodels>=0.14.0",
    "streamlit>=1.45.0",
    "uvicorn>=0.47.0",
]

[project.urls]
Homepage = "https://github.com/rosscyking1115/responsible-neobank-growth"
Repository = "https://github.com/rosscyking1115/responsible-neobank-growth"
Dashboard = "https://neobank-appuct-analytics.streamlit.app/"

[project.optional-dependencies]
gcp = [
    "dbt-bigquery>=1.11.1,<2",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-storage>=2.4.0,<3.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
